--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile ('com.squareup.retrofit2:converter-simplexml:2.3.0'){
+        exclude module: 'stax-api'
+
+    }
     testCompile 'junit:junit:4.12'
 }
